[package]
name = "moonrabbit-test-client"
version = "0.9.1"
authors = ["Moon Rabbit <admin@moonrabbit.com>"]
edition = "2018"

[dependencies]
moonrabbit-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

# moonrabbit dependencies
moonrabbit-test-runtime = { path = "../../../runtime/test-runtime" }
moonrabbit-test-service = { path = "../service" }
moonrabbit-primitives = { path = "../../../primitives" }
moonrabbit-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sc-service = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sc-block-builder = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sc-consensus = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-inherents = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-core = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-api = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-timestamp = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-consensus-babe = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
sp-state-machine = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/moonRabbitAZ/substrate", branch = "master" }
futures = "0.3.12"
